adding some structure to the html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UFT-8">
+  <title>Daisy Agrawal</title>
+  <link rel="stylesheet" type="text/css" href="css/design.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="css/logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="css/logo.png">
+  <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/css/iziModal.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
+    Hey! Welcome to my personal website :)
+</body>
+</html>
