trying animated text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-    Hey! Welcome to my personal website :)
+    <div class = "typewriter">
+        <h1> Hi there! It's Daisy </h1>
+    </div>
 </body>
 </html>
