--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-    <div class = "typewriter">
-        <h1> Hi there! It's Daisy </h1>
-    </div>
+    <h1 class = "line">
+        <span class = "text_1"> Hi there! I'm Daisy </span>
+    </h1>
 </body>
 </html>
