--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-    <h1 class = "line">
+    <h1 class = "typewriter">
         <span class = "text_1"> Hi there! I'm Daisy </span>
     </h1>
 </body>
